Polish home page

--- a/src/index.scss
+++ b/src/index.scss
@@ -200,7 +200,7 @@ main a.button {
   background-color: #2196F3;
   border: 2px solid #2196F3;
   color: white;
-  display: block;
+  display: inline-block;
   margin: 40px 10px 0;
   opacity: 0.9;
   padding: 8px;
