Make admin buttons green

--- a/src/admin/admin.scss
+++ b/src/admin/admin.scss
@@ -199,8 +199,8 @@ main ul label {
 }
 
 .download {
-  background-color: #2196F3;
-  border: 2px solid #2196F3;
+  background-color: #209403;
+  border: 2px solid #209403;
   color: white;
   opacity: 0.9;
 }
